[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "avio"
version = "3.2.9"
description = "A python module for processing media streams"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Stephen Rhodes", email = "sr99622@gmail.com" },
]
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sr99622/libavio"
"Bug Tracker" = "https://github.com/sr99622/libavio/issues"

[tool.scikit-build]
wheel.packages = ["avio"]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
minimum-version = "build-system.requires"